fix: bug on mobile icons

--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -3,8 +3,12 @@
 @media screen and (max-width: 768px) {
   /* reset default styles */
   img {
-    width: 100%;
+    width: auto;
     max-width: 300px;
+  }
+
+  p:has(img) {
+    text-align: left !important; 
   }
 
   /* Posts list */
